# PNU-TERM_SmartHome-MCP

./: pyproject.toml  server_log.out
app/: server.py
app/crud/: rest.py
app/crud/event/: listener.py  publisher.py  sse.py
app/router/: actuator.py  device.py  template.py
app/schema/: rest.py
app/templates/: device.html
app/templates/components/: actuator_card.html  sensor_card.html
app/util/: broker.py
arduino/smart-home-client/: platformio.ini
arduino/smart-home-client/lib/SmartHome/: SmartHome.cpp  SmartHome.h
arduino/smart-home-client/src/: main.cpp
arduino/smart-home-executer/smart-home-excutor/: smart-home-excutor.ino
arduino/smart-home-executor/: smart-home-executor.ino
shmcp/: server.py  tool.py
shmcp/util/: client.py
