[project]
name = "proj-mvp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.120.0",
    "fastmcp>=2.13.0.2",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "paho-mqtt>=2.1.0",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.44",
    "sqlmodel>=0.0.27",
    "uvicorn>=0.38.0",
]
